--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -84,9 +84,9 @@
                         </a>
 
                         <ul>
-                           
+
                             <li><a asp-area="admin" asp-controller="subject" asp-action="index">Subject List</a></li>
-                            
+
                         </ul>
 
                     </li>
@@ -103,6 +103,13 @@
                             <li><a asp-area="admin" asp-controller="grade" asp-action="index">Grade List</a></li>
 
                         </ul>
+
+                    </li>
+                    <li class="has-child">
+                        <a asp-area="admin" asp-controller="progressReport" asp-action="progressReport">
+                            <i class="now-ui-icons education_atom"></i>
+                            <p>Progress Report </p>
+                        </a>
 
                     </li>
 
