--- a/LMS/Areas/Teachers/Views/Test/ViewTestResult.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/ViewTestResult.cshtml
@@ -37,7 +37,7 @@
                                             <td>@item.Question</td>
                                             @if (item.Answer_Type_Id == 3)
                                             {
-                                                <td><a href="@item.Answer" target="_blank">Click to view your Answer</a></td>
+                                                <td><a href="@item.Answer" target="_blank">Click to view Answer</a></td>
                                             }
                                             else
                                             {
