--- a/LMS/Views/Login/Profile.cshtml
+++ b/LMS/Views/Login/Profile.cshtml
@@ -92,11 +92,11 @@
                             @ViewBag.UserEmail
                         </p>
                     </div>
-                    <p class="description text-center">
+                    @*<p class="description text-center">
                         "Lamborghini Mercy <br>
                         Your chick she so thirsty <br>
                         I'm in that two seat Lambo"
-                    </p>
+                    </p>*@
                 </div>
 
 
