--- a/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
+++ b/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
@@ -38,6 +38,14 @@
 
         </li>
         <li class="has-child">
+            <a asp-area="students" asp-controller="progressReport" asp-action="progressReport">
+                <i class="now-ui-icons education_atom"></i>
+                <p>Pregoress Report </p>
+            </a>
+
+
+        </li>
+        <li class="has-child">
             <a asp-area="students" asp-controller="attendance" asp-action="attendances">
                 <i class="now-ui-icons education_atom"></i>
                 <p>Attendance </p>
@@ -45,7 +53,7 @@
 
 
         </li>
-         <li class="has-child">
+        <li class="has-child">
             <a asp-area="students" asp-controller="announcement" asp-action="announcements" asp-route-ClassSection_Id="@ClassSection_id">
                 <i class="now-ui-icons education_atom"></i>
                 <p>Announcements </p>
@@ -54,7 +62,7 @@
 
         </li>
         <li class="has-child">
-            <a asp-controller="Library" asp-action="Index" >
+            <a asp-controller="Library" asp-action="Index">
                 <i class="now-ui-icons education_atom"></i>
                 <p>Virtual Library </p>
             </a>
