--- a/LMS/Views/Shared/Components/TPSidebar/TPSidebarVC.cshtml
+++ b/LMS/Views/Shared/Components/TPSidebar/TPSidebarVC.cshtml
@@ -61,7 +61,7 @@
                 <li><a asp-area="teachers" asp-controller="test" asp-action="index">Assessment List</a></li>
             </ul>
         </li>
-        <li>
+        <li class="has-child">
             <a href="#">
                 <i class="now-ui-icons design_app"></i>
                 <p>Grades</p>
@@ -74,7 +74,7 @@
 
             </ul>
         </li>
-        <li>
+        <li class="has-child">
             <a asp-area="teachers" asp-controller="announcement" asp-action="index">
                 <i class="now-ui-icons design_app"></i>
                 <p>Announcements</p>
