--- a/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
+++ b/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
@@ -34,13 +34,13 @@
         left: 0;
         height: 25px;
         width: 25px;
-        background-color: #eee;
+        background-color: #ccc;
         border-radius: 50%;
     }
 
     /* On mouse-over, add a grey background color */
     .container:hover input ~ .checkmark {
-        background-color: #ccc;
+        background-color: #eee;
     }
 
     /* When the radio button is checked, add a blue background */
@@ -84,7 +84,8 @@
                 <div class="card-body">
                     <form enctype="multipart/form-data">
                         <div id="divQuestions">
-                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                            @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>*@
+                            <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
                             <script type='text/javascript'>
                                 $.getScript("/js/StudentTest.js")
                                     .done(function (script, textStatus) {
