--- a/LMS/Areas/Teachers/Views/Grade/Students.cshtml
+++ b/LMS/Areas/Teachers/Views/Grade/Students.cshtml
@@ -17,7 +17,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Class Subject <b>List</b></h2>
+                                        <h2>Students Grade <b>List</b></h2>
                                     </div>
                                 </div>
                             </div>
