--- a/LMS/Areas/Teachers/Views/Grade/StudentsTestResults.cshtml
+++ b/LMS/Areas/Teachers/Views/Grade/StudentsTestResults.cshtml
@@ -17,7 +17,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Student Tests <b>Details</b></h2>
+                                        <h2>Student Assessments <b>Detail</b></h2>
                                     </div>
                                 </div>
                             </div>
